--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "@types/react-scroll": "^1.8.7",
+    "apexcharts": "^3.42.0",
+    "axios": "^1.5.0",
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scroll": "^1.8.9",
