--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.5",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
