--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.11",
@@ -30,13 +28,13 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
-    "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.5",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
