--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
