--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
