--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.5",
     "react-to-print": "^2.14.13",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
